--- a/fallprevention.html
+++ b/fallprevention.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fall prevention</title>
+    <title>Fall prevention workshop</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle.css" rel="stylesheet">
@@ -51,7 +51,7 @@
                 <option value="en">English</option>
                 <option value="fr">Français</option>
                 </select>
-                <h1 id="title">Fall prevention</h1>
+                <h1 id="title">Fall prevention workshop</h1>
                 <div class="container">
                 <div class="details">
                 <p id="welcome-message">Welcome to the Fall prevention workshop at Restigouche Dojo!
