--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -61,7 +61,7 @@
 We understand the importance of feeling secure in your daily life, which is why we are committed to providing a supportive and inclusive environment for all participants. Our program is not about promoting aggression or violence, but rather about instilling a sense of confidence and control.</p>
                 <p id="enroll-message">Enroll now and take the first step towards feeling confident and secure!
                 </p>
-                <button id="enroll-btn"> <a href="https://square.link/u/WWQU0vII">Enroll/Inscription</a></button>
+                <button id="enroll-btn"> <a href="">Enroll/Inscription</a></button>
                     
                 <button id="disclaimer-btn">Disclaimer</button>
                     <div id="disclaimer-message">
