--- a/activitygroup.html
+++ b/activitygroup.html
@@ -59,17 +59,17 @@
       <div class="container">
         <h2>Why Choose Restigouche Dojo for Activity Groups?</h2>
         <div class="feature-item">
-          <img src="https://img.icons8.com/ios/256/running-with-friend.png">
+          <img src="https://img.icons8.com/color/256/puzzle.png">
           <h3>Develop Essential Skills through Free Play</h3>
           <p>Our Activity Group class at Restigouche Dojo offers children the opportunity to engage in free play, fostering the development of essential skills such as problem-solving, creativity, and critical thinking.</p>
         </div>
         <div class="feature-item">
-          <img src="https://img.icons8.com/dusk/256/group-activity.png">
+          <img src="https://img.icons8.com/ios/256/communication-skills.png">
           <h3>Cultivate Social Skills and Teamwork</h3>
           <p>In our Activity Group class, we prioritize teamwork and cooperation, allowing children to learn important social skills and make new friends. Through interactive activities, they will enhance their communication abilities and build strong relationships.</p>
         </div>
         <div class="feature-item">
-          <img src="https://img.icons8.com/color/256/kids-activity.png" alt="Fun Icon">
+          <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Fun Icon">
           <h3>Experience Fun-Filled Play and Active Learning</h3>
           <p>Restigouche Dojo's Activity Group provides a dynamic and enjoyable environment where children can have a great time while staying active. We believe that learning should be fun, and our class ensures an exciting experience for every child.</p>
         </div>
