--- a/activitygroup.html
+++ b/activitygroup.html
@@ -50,7 +50,7 @@
 
              <section class="hero">
       <div class="container">
-        <h2>Activity Group - Discover the Power of Play at Restigouche Dojo! </h2>
+        <h2>Activity Groups - Discover the Power of Play at Restigouche Dojo! </h2>
         <p>Calling all parents and little warriors! Are you searching for an activity that not only engages your child's mind and body but also nurtures essential skills for their overall development? Look no further! Restigouche Dojo proudly presents our exciting new class, where children can unleash their imagination, engage in free play, and cultivate essential skills!</p>
         <a href="https://restigouchedojo.com/payment.html" class="cta-button">Register now</a>
       </div>
