--- a/activitygroup.html
+++ b/activitygroup.html
@@ -47,7 +47,10 @@
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-
+                        <select id="language-selection">
+                <option value="en">English</option>
+                <option value="fr">Français</option>
+                </select>
              <section class="hero">
       <div class="container">
         <h2>Activity Groups - Discover the Power of Play at Restigouche Dojo! </h2>
