--- a/activitygroup.html
+++ b/activitygroup.html
@@ -46,11 +46,11 @@
     
     <!--CONTENT-->
     <div class="content-area">
-        <div class="wrapper-body">
-                 <select id="language-selection">
+        <select id="language-selection">
                 <option value="en">English</option>
                 <option value="fr">Français</option>
                 </select>
+        <div class="wrapper-body">
              <section class="hero">
       <div class="container">
         <h2 id="title">
@@ -66,7 +66,7 @@
       <div class="container">
         <h2 id="whyrestigouchedojo">Why Choose Restigouche Dojo for Activity Groups?</h2>
         <div class="feature-item">
-          <img src="https://icons8.com/icon/12782/puzzle">
+          <img src="https://img.icons8.com/color/256/puzzle.png">
           <h3 id="reasonone">Develop Essential Skills through Free Play</h3>
           <p id="reasononetext">Our Activity Group class at Restigouche Dojo offers children the opportunity to engage in free play, fostering the development of essential skills such as problem-solving, creativity, and critical thinking.</p>
         </div>
