--- a/activitygroup.html
+++ b/activitygroup.html
@@ -59,26 +59,26 @@
         <p id="program-description">
           Calling all parents and little warriors! Are you searching for an activity that not only engages your child's mind and body but also nurtures essential skills for their overall development? Look no further! Restigouche Dojo proudly presents our exciting new class, where children can unleash their imagination, engage in free play, and cultivate essential skills!
         </p>
-        <a href="https://restigouchedojo.com/payment.html" class="cta-button" id="enrollMessage">Register now</a>
+        <a href="https://restigouchedojo.com/payment.html" class="cta-button" id="enroll-message">Register now</a>
       </div>
     </section>
     <section class="features">
       <div class="container">
-        <h2 id="whyrestigouchedojo">Why Choose Restigouche Dojo for Activity Groups?</h2>
+        <h2 id="why-restigouche-dojo">Why Choose Restigouche Dojo for Activity Groups?</h2>
         <div class="feature-item">
           <img src="https://img.icons8.com/color/256/puzzle.png">
-          <h3 id="reasonone">Develop Essential Skills through Free Play</h3>
-          <p id="reasononetext">Our Activity Group class at Restigouche Dojo offers children the opportunity to engage in free play, fostering the development of essential skills such as problem-solving, creativity, and critical thinking.</p>
+          <h3 id="reason-one">Develop Essential Skills through Free Play</h3>
+          <p id="reason-one-text">Our Activity Group class at Restigouche Dojo offers children the opportunity to engage in free play, fostering the development of essential skills such as problem-solving, creativity, and critical thinking.</p>
         </div>
         <div class="feature-item">
           <img src="https://img.icons8.com/ios/256/communication-skills.png">
-          <h3>Cultivate Social Skills and Teamwork</h3>
-          <p id="reasontwotext">In our Activity Group class, we prioritize teamwork and cooperation, allowing children to learn important social skills and make new friends. Through interactive activities, they will enhance their communication abilities and build strong relationships.</p>
+          <h3 id="reason-two">Cultivate Social Skills and Teamwork</h3>
+          <p id="reason-two-text">In our Activity Group class, we prioritize teamwork and cooperation, allowing children to learn important social skills and make new friends. Through interactive activities, they will enhance their communication abilities and build strong relationships.</p>
         </div>
         <div class="feature-item">
           <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Fun Icon">
-          <h3>Experience Fun-Filled Play and Active Learning</h3>
-          <p>Restigouche Dojo's Activity Group provides a dynamic and enjoyable environment where children can have a great time while staying active. We believe that learning should be fun, and our class ensures an exciting experience for every child.</p>
+          <h3 id="reason-three">Experience Fun-Filled Play and Active Learning</h3>
+          <p id="reason-three-text">Restigouche Dojo's Activity Group provides a dynamic and enjoyable environment where children can have a great time while staying active. We believe that learning should be fun, and our class ensures an exciting experience for every child.</p>
         </div>
       </div>
     </section>
