--- a/activitygroup.html
+++ b/activitygroup.html
@@ -73,7 +73,7 @@
         <div class="feature-item">
           <img src="https://img.icons8.com/ios/256/communication-skills.png">
           <h3 id="reason-two">Cultivate Social Skills and Teamwork</h3>
-          <p id="reason-two-text">In our Activity Group class, we prioritize teamwork and cooperation, allowing children to learn important social skills and make new friends. Through interactive activities, they will enhance their communication abilities and build strong relationships.</p>
+          <p id="reason-two-text">In our Activity Group class, children freely explore, play, and interact in a fun and relaxed environment. We encourage self-expression, independence, and imaginative play, fostering their interests and social skills. Through unstructured activities, they make friends and build connections at their own pace.</p>
         </div>
         <div class="feature-item">
           <img src="https://img.icons8.com/dusk/256/like--v2.png" alt="Fun Icon">
