--- a/activitygroup.html
+++ b/activitygroup.html
@@ -59,7 +59,7 @@
         <p id="program-description">
           Calling all parents and little warriors! Are you searching for an activity that not only engages your child's mind and body but also nurtures essential skills for their overall development? Look no further! Restigouche Dojo proudly presents our exciting new class, where children can unleash their imagination, engage in free play, and cultivate essential skills!
         </p>
-        <a href="https://restigouchedojo.com/payment.html" class="cta-button" id="enroll-message">Register now</a>
+        <a href="https://square.link/u/Cn5ZtgDm" class="cta-button" id="enroll-message">Register now</a>
       </div>
     </section>
     <section class="features">
