--- a/activitygroup.html
+++ b/activitygroup.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activity Groups</title>
+    <title>Playful</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle2.css" rel="stylesheet">
@@ -54,7 +54,7 @@
              <section class="hero">
       <div class="container">
         <h2 id="title">
-          Activity Groups - Discover the Power of Play at Restigouche Dojo! 
+          Playful - Discover the Power of Play at Restigouche Dojo! 
         </h2>
         <p id="program-description">
           Calling all parents and little warriors! Are you searching for an activity that not only engages your child's mind and body but also nurtures essential skills for their overall development? Look no further! Restigouche Dojo proudly presents our exciting new class, where children can unleash their imagination, engage in free play, and cultivate essential skills!
