--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
-                      <p class="people__desc"><a href="https://restigouchedojo.com/activitygroup.html">Activity groups</a></p>
-		      <p class="people__desc">Fall prevention and safe landing</p>
-		      <p class="people__desc">Soft play for babies</p>
-		      <p class="people__desc">Women self-defense 2.0</p>
+                      <p class="people__desc"><a href="https://restigouchedojo.com/activitygroup.html">Playful (Activity group)</a>
+		      <br>Fall prevention and safe landing
+		      <br>Soft play for babies
+		      <br>Women self-defense 2.0
+		      </p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Events</h2>
