--- a/meettheteam.html
+++ b/meettheteam.html
@@ -61,7 +61,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Megan Raymond</h2>
                       <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
-                          <a href="achievementsmeg.html">see more</a></p>
+                         <br><a href="blog2.html">More about Megan</a>
+                          <br><a href="achievementsmeg.html">Results</a>
+                      </p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Megan Raymond</h2>
@@ -76,7 +78,8 @@
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
                         Judo black belt and Brazilian Jiu Jitsu purple belt. NCCP# 1073218 
-                      <a href="achievementsmax.html">see more</a> 
+                      <br> <a href="blog1.html">More about Maxime</a>
+                      <br> <a href="achievementsmax.html">Results</a>
                     </p>
                 </div>
                 <div class="people__div people__div--name">
