--- a/meettheteam.html
+++ b/meettheteam.html
@@ -60,7 +60,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Megan Raymond</h2>
-                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
+                      <p class="people__desc">Judo Black Belt and BJJ blue belt<br> NCCP# 6615715  
                          <br><a href="blog2.html">More about Megan</a>
                           <br><a href="achievementsmeg.html">Results</a>
                       </p>
@@ -77,7 +77,8 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
-                        Judo black belt and Brazilian Jiu Jitsu purple belt. NCCP# 1073218 
+                        Judo black belt and BJJ purple belt. 
+                        <br>NCCP# 1073218 
                       <br> <a href="blog1.html">More about Maxime</a>
                       <br> <a href="achievementsmax.html">Results</a>
                     </p>
