--- a/photosvideos.html
+++ b/photosvideos.html
@@ -61,7 +61,7 @@
                 
         
                 <div class="gallery-item">
-                    <img class="gallery-image" src="Photos/selfdefense.jpg" alt="Women Self-Defense Workshop">
+                    <img class="gallery-image" src="Photos/bjjpromotion.jpg" alt="BJJ Promotion June 2023">
                 </div>
         <!--COMING SOON 
                 <div class="gallery-item">
