--- a/meettheteam.html
+++ b/meettheteam.html
@@ -72,7 +72,7 @@
       
               <div class="demo__div people">
                 <div class="people__div people__div--img">
-                    <img src="Photos/profilmax.jpg" alt="" class="people__img">
+                    <img src="Photos/senseimax.jpg" alt="Sensei Maxime" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Maxime Raymond</h2>
