--- a/photosvideos.html
+++ b/photosvideos.html
@@ -63,11 +63,11 @@
                 <div class="gallery-item">
                     <img class="gallery-image" src="Photos/bjjpromotion.jpg" alt="BJJ Promotion June 2023">
                 </div>
-        <!--COMING SOON 
+       
                 <div class="gallery-item">
-                    <img class="gallery-image" src="https://images.unsplash.com/photo-1445810694374-0a94739e4a03?w=500&h=500&fit=crop" alt="back view of woman wearing a backpack and beanie waiting to cross the road on a busy street at night in New York City, USA">
+                    <img class="gallery-image" src="Photos/dojo.jpg" alt="Dojo">
                 </div>
-        
+        <!--COMING SOON 
                 <div class="gallery-item">
                     <img class="gallery-image" src="https://images.unsplash.com/photo-1486334803289-1623f249dd1e?w=500&h=500&fit=crop" alt="man wearing a black jacket, white shirt, blue jeans, and brown boots, playing a white electric guitar while sitting on an amp">
                 </div>
