--- a/payment.html
+++ b/payment.html
@@ -65,7 +65,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc"> Winter block(full): $164.94
+                      <p class="people__desc"> Fall block(full): $164.94
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
 			 <span class="red"><strong>ON SALE</strong></span>: Annual: $298.71
 			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2023 season</h2>
-                    <p class="people__desc"> Winter block: $195.81
+                    <p class="people__desc"> Fall block: $195.81
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
@@ -104,7 +104,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc">Winter block: $257.55
+                      <p class="people__desc">Fall block: $257.55
                         <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
