--- a/payment.html
+++ b/payment.html
@@ -65,9 +65,9 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc"> Fall block(full): $164.94
+                      <p class="people__desc"> Fall block: $195.81
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
-			 <span class="red"><strong>ON SALE</strong></span>: Annual: $298.71
+			 <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
 			      
 			    <a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info</a>
