--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Our Mission</h2>
-                    <p class="people__desc">Our mission is to spread the Kodokan Judo sport's fundamentals and lessons to people of all skill levels.</p>
+                    <p class="people__desc">Welcome to Restigouche Dojo! Our mission is to spread the fundamentals of Kodokan Judo to people of all skill levels. We now offer a variety of classes including kids' activities, self-defense, BJJ, and more. Join us to experience the transformative power of martial arts.</p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Mission</h2>
