--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  </div>
                  <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
-                     <li><a href="meettheteam.html">About</a></li>
+                     <li><a href="meettheteam.html">Instructors</a></li>
                      <li><a href="membership.html">Schedule</a></li>
 			<li><a href="payment.html">Registration</a></li>
                      <li><a href="photosvideos.html">Media</a></li>
