--- a/membership.html
+++ b/membership.html
@@ -51,14 +51,41 @@
                 <a class="float-left" href="contactus.html">Send us a message for more info!</a>
             </h3>
             
-            <h2>Schedule Winter 2023</h2>
-                <!--New content-->
+            <h2></h2>
+                <!--Schedule area-->
                 
-               <div class="calendar">
-                 <img src="Photos/schedule2023judobjj.png" alt="Calendar2023" width="80%">
-                </div>
+    <div class="schedule-area">
+        <h2 class="schedule-title">Schedule Winter 2023</h2>
+        <table class="schedule-table">
+            <thead>
+                <tr>
+                    <th>Day</th>
+                    <th>Time</th>
+                    <th>Class</th>
+                    <th>Instructor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Monday</td>
+                    <td>6:00 PM - 7:00 PM</td>
+                    <td>Beginner Jiu-Jitsu</td>
+                    <td>John Doe</td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td>6:00 PM - 7:00 PM</td>
+                    <td>Advanced Jiu-Jitsu</td>
+                    <td>Jane Smith</td>
+                </tr>
+                <!-- Add more rows for each class -->
+            </tbody>
+        </table>
+    </div>
 
-                <!--New content end-->
+    <!-- ... -->
+
+                <!--Schedule area end-->
 
         </div>
     </div>
