--- a/membership.html
+++ b/membership.html
@@ -47,9 +47,12 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <h3>
-                <a class="float-left" href="contactus.html">Send us a message for more info!</a>
-            </h3>
+<div class="info-section">
+    <h3 class="info-message">
+        <a class="info-link" href="contactus.html">Send us a message for more info!</a>
+    </h3>
+</div>
+
             
             <h2></h2>
                 <!--Schedule area-->
