--- a/meettheteam.html
+++ b/meettheteam.html
@@ -48,35 +48,41 @@
             <h3></h3>
 
             <!--MEET THE TEAM BANNER-->
-<div class="instructor-card">
-    <div class="instructor-card__image">
-        <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="">
-    </div>
-    <div class="instructor-card__info">
-        <h3 class="instructor-card__name">Megan Raymond</h3>
-        <p class="instructor-card__desc">
-            Judo Black Belt and BJJ blue belt<br>
-            NCCP# 6615715<br>
-            <a href="blog2.html">More about Megan</a><br>
-            <a href="achievementsmeg.html">Results</a>
-        </p>
+<div class="instructors-section">
+    <h2 class="instructors-title">Instructors</h2>
+    <div class="instructor-card-container">
+        <div class="instructor-card">
+            <div class="instructor-card__image">
+                <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="">
+            </div>
+            <div class="instructor-card__info">
+                <h3 class="instructor-card__name">Megan Raymond</h3>
+                <p class="instructor-card__desc">
+                    Judo Black Belt and BJJ blue belt<br>
+                    NCCP# 6615715<br>
+                    <a href="blog2.html">More about Megan</a><br>
+                    <a href="achievementsmeg.html">Results</a>
+                </p>
+            </div>
+        </div>
+
+        <div class="instructor-card">
+            <div class="instructor-card__image">
+                <img src="Photos/senseimax.jpg" alt="Sensei Maxime">
+            </div>
+            <div class="instructor-card__info">
+                <h3 class="instructor-card__name">Maxime Raymond</h3>
+                <p class="instructor-card__desc">
+                    Judo black belt and BJJ purple belt.<br>
+                    NCCP# 1073218<br>
+                    <a href="blog1.html">More about Maxime</a><br>
+                    <a href="achievementsmax.html">Results</a>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="instructor-card">
-    <div class="instructor-card__image">
-        <img src="Photos/senseimax.jpg" alt="Sensei Maxime">
-    </div>
-    <div class="instructor-card__info">
-        <h3 class="instructor-card__name">Maxime Raymond</h3>
-        <p class="instructor-card__desc">
-            Judo black belt and BJJ purple belt.<br>
-            NCCP# 1073218<br>
-            <a href="blog1.html">More about Maxime</a><br>
-            <a href="achievementsmax.html">Results</a>
-        </p>
-    </div>
-</div>
 
         
         <!--DESCRIPTION HAS BEEN REMOVED-->
