--- a/membership.html
+++ b/membership.html
@@ -70,18 +70,40 @@
             </thead>
             <tbody>
                 <tr>
-                    <!--
+                    <td>Sunday</td>
+                    <td>9:00 PM - 9:45 AM</td>
+                    <td>Tiny Tots</td>
+                    <td>Maxime Raymond</td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>10:00 PM - 10:45 AM</td>
+                    <td>Kinder Judo</td>
+                    <td>Megan Raymond</td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td>11:00 PM - 12:00 PM</td>
+                    <td>Youth Judo</td>
+                    <td>Megan Raymond</td>
+                </tr>
+                <tr>
                     <td>Monday</td>
                     <td>6:00 PM - 7:00 PM</td>
-                    <td>Beginner Jiu-Jitsu</td>
-                    <td>John Doe</td>
+                    <td>Brazilian Jiu Jitsu</td>
+                    <td>Maxime Raymond</td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td>5:00 PM - 6:00 PM</td>
+                    <td>Youth Judo</td>
+                    <td>Megan Raymond</td>
                 </tr>
                 <tr>
                     <td>Wednesday</td>
                     <td>6:00 PM - 7:00 PM</td>
-                    <td>Advanced Jiu-Jitsu</td>
-                    <td>Jane Smith</td>
-                    -->
+                    <td>Brazilian Jiu Jitsu</td>
+                    <td>Maxime Raymond</td>
                 </tr>
                 <!-- Add more rows for each class -->
             </tbody>
