--- a/membership.html
+++ b/membership.html
@@ -70,19 +70,17 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Sunday</td>
+                    <td rowspan="3">Sunday</td>
                     <td>9:00 AM - 9:45 AM</td>
                     <td>Tiny Tots</td>
                     <td>Maxime Raymond</td>
                 </tr>
                 <tr>
-                    <td>Sunday</td>
                     <td>10:00 AM - 10:45 AM</td>
                     <td>Kinder Judo</td>
                     <td>Megan Raymond</td>
                 </tr>
                 <tr>
-                    <td>Sunday</td>
                     <td>11:00 AM - 12:00 PM</td>
                     <td>Youth Judo</td>
                     <td>Megan Raymond</td>
@@ -94,13 +92,12 @@
                     <td>Maxime Raymond</td>
                 </tr>
                 <tr>
-                    <td>Wednesday</td>
+                    <td rowspan="2">Wednesday/td>
                     <td>5:00 PM - 6:00 PM</td>
                     <td>Youth Judo</td>
                     <td>Megan Raymond</td>
                 </tr>
                 <tr>
-                    <td>Wednesday</td>
                     <td>6:00 PM - 7:00 PM</td>
                     <td>Brazilian Jiu Jitsu</td>
                     <td>Maxime Raymond</td>
