--- a/membership.html
+++ b/membership.html
@@ -92,7 +92,7 @@
                     <td>Maxime Raymond</td>
                 </tr>
                 <tr>
-                    <td rowspan="2">Wednesday/td>
+                    <td rowspan="2">Wednesday</td>
                     <td>5:00 PM - 6:00 PM</td>
                     <td>Youth Judo</td>
                     <td>Megan Raymond</td>
