--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5><a href="payment.html">FALL REGISTRATION OPEN!</a></h5>
+                <h5><a href="payment.html">JUDO - FALL REGISTRATION OPEN!</a></h5>
               </div>
             <!--BOX END-->
 		
