--- a/achievementsmeg.html
+++ b/achievementsmeg.html
@@ -7,6 +7,8 @@
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="achievements.css" rel="stylesheet">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 
 </head>
 <body>
