--- a/meettheteam.html
+++ b/meettheteam.html
@@ -6,7 +6,11 @@
     <title>Restigouche Dojo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
-</head>
+    <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+ </head>
+
+    
 <body>
     <!--NAV BAR AND LOGO-->
     <div class="wrapper">
