--- a/payment.html
+++ b/payment.html
@@ -6,6 +6,8 @@
     <title>Restigouche Dojo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
+	<!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 
 </head>
 <body>
