--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Law Enforcement Brazilian Jiu-Jitsu</title>
+    <title>Brazilian Jiu-Jitsu for Law Enforcement</title>
     <!-- CSS style sheet -->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle2.css" rel="stylesheet">
@@ -42,7 +42,7 @@
 
     <div class="banner-area">
         <!-- Update the banner heading if needed -->
-        <h2>Law Enforcement Brazilian Jiu-Jitsu</h2>
+        <h2></h2>
     </div>
     
     <!-- CONTENT -->
@@ -51,8 +51,8 @@
             <section class="hero">
                 <div class="container">
                     <!-- Update the hero section content -->
-                    <h2>Law Enforcement Brazilian Jiu-Jitsu (BJJ) Classes</h2>
-                    <p>Law Enforcement Brazilian Jiu-Jitsu (BJJ) is a specialized class designed to provide practical self-defense techniques and skills tailored for law enforcement professionals. BJJ's principles of leverage and technique make it an effective martial art for individuals in their careers.</p>
+                    <h2>Brazilian Jiu-Jitsu (BJJ) Classes for Law Enforcement</h2>
+                    <p>Brazilian Jiu-Jitsu (BJJ) Classes for Law Enforcement is a specialized class designed to provide practical self-defense techniques and skills tailored for law enforcement professionals. BJJ's principles of leverage and technique make it an effective martial art for individuals in their careers.</p>
                     <p>Our highly skilled instructor, Maxime Raymond, who holds a Judo black belt and a BJJ purple belt, will lead the classes. The curriculum emphasizes fundamental BJJ techniques with real-world applications relevant to Law enforcement situations.</p>
                     <p>The class is open exclusively to Law enforcement personnel and is suitable for participants of all fitness and experience levels.</p>
                     <!-- Update the link URL and text for registration -->
@@ -62,7 +62,7 @@
             <section class="features">
                 <div class="container">
                     <!-- Update the features section heading -->
-                    <h2>Why Choose Law Enforcement Brazilian Jiu-Jitsu at Restigouche Dojo?</h2>
+                    <h2>Why Choose Brazilian Jiu-Jitsu at Restigouche Dojo?</h2>
                     <div class="feature-item">
                         <img src="https://img.icons8.com/doodle/256/muscle-flexing.png">
                         <h3>Practical Self-Defense Techniques</h3>
