--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -52,9 +52,10 @@
                 <div class="container">
                     <!-- Update the hero section content -->
                     <h2>Brazilian Jiu-Jitsu (BJJ) Classes for Law Enforcement</h2>
-                    <p>Brazilian Jiu-Jitsu (BJJ) Classes for Law Enforcement is a specialized class designed to provide practical self-defense techniques and skills tailored for law enforcement professionals. BJJ's principles of leverage and technique make it an effective martial art for individuals in their careers.</p>
-                    <p>Our highly skilled instructor, Maxime Raymond, who holds a Judo black belt and a BJJ purple belt, will lead the classes. The curriculum emphasizes fundamental BJJ techniques with real-world applications relevant to Law enforcement situations.</p>
-                    <p>The class is open exclusively to Law enforcement personnel and is suitable for participants of all fitness and experience levels.</p>
+                    <p>Experience Brazilian Jiu-Jitsu (BJJ) Classes tailored for law enforcement professionals. Our specialized class                             focuses on practical self-defense techniques and essential skills for individuals in their careers.</p>
+                    <p>Under the guidance of our highly skilled instructor, Maxime Raymond, who holds a Judo black belt and a BJJ purple                         belt, you'll learn fundamental BJJ techniques with practical applications relevant to law enforcement.</p>
+                    <p>The class is exclusively open to law enforcement personnel, offering training suitable for participants of all                             fitness and experience levels.</p>
+
                     <!-- Update the link URL and text for registration -->
                     <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
                 </div>
