--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -52,9 +52,9 @@
                 <div class="container">
                     <!-- Update the hero section content -->
                     <h2>Brazilian Jiu-Jitsu (BJJ) Classes for Law Enforcement</h2>
-                    <p>Experience Brazilian Jiu-Jitsu (BJJ) Classes tailored for law enforcement professionals. Our specialized class                             focuses on practical self-defense techniques and essential skills for individuals in their careers.</p>
-                    <p>Under the guidance of our highly skilled instructor, Maxime Raymond, who holds a Judo black belt and a BJJ purple                         belt, you'll learn fundamental BJJ techniques with practical applications relevant to law enforcement.</p>
-                    <p>The class is exclusively open to law enforcement personnel, offering training suitable for participants of all                             fitness and experience levels.</p>
+        <p>Experience Brazilian Jiu-Jitsu (BJJ) Classes exclusively tailored for law enforcement professionals. Our specialized class focuses on practical self-defense techniques and essential skills for individuals in their careers.</p>
+        <p>Under the guidance of our highly skilled instructor, Maxime Raymond, who holds a Judo black belt and a BJJ purple belt, you'll receive the same high-quality training as our regular BJJ courses throughout the week.</p>
+        <p>The class is exclusively open to law enforcement personnel, offering training suitable for participants of all fitness and experience levels.</p>
 
                     <!-- Update the link URL and text for registration -->
                     <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
