--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -60,27 +60,28 @@
                     <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
                 </div>
             </section>
-            <section class="features">
-                <div class="container">
-                    <!-- Update the features section heading -->
-                    <h2>Why Choose Brazilian Jiu-Jitsu at Restigouche Dojo?</h2>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/doodle/256/muscle-flexing.png">
-                        <h3>Practical Self-Defense Techniques</h3>
-                        <p>Learn BJJ techniques specifically tailored for real-life Law enforcement scenarios, enhancing your ability to handle critical situations safely.</p>
-                    </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/color/256/kimono.png" alt="Self-Defense Icon">
-                        <h3>Effective Use of Leverage and Technique</h3>
-                        <p>BJJ's emphasis on leverage and technique allows you to subdue and control opponents with minimal effort, maximizing effectiveness while minimizing injury risks.</p>
-                    </div>
-                    <div class="feature-item">
-                        <img src="https://img.icons8.com/color/256/mission-of-a-company.png" alt="Challenge Icon">
-                        <h3>Enhanced Physical and Mental Preparedness</h3>
-                        <p>Participate in a mentally and physically challenging training program, developing discipline, focus, and resilience, essential attributes for Law enforcement professionals.</p>
-                    </div>
-                </div>
-            </section>
+<section class="features">
+    <div class="container">
+        <!-- Update the features section heading -->
+        <h2>Why Choose Brazilian Jiu-Jitsu at Restigouche Dojo?</h2>
+        <div class="feature-item">
+            <img src="https://img.icons8.com/doodle/256/muscle-flexing.png">
+            <h3>Practical Self-Defense Techniques for Law Enforcement</h3>
+            <p>Experience BJJ techniques specifically tailored for real-life Law Enforcement scenarios, enhancing your ability to handle critical situations safely. Our instructors understand the unique challenges faced by law enforcement professionals and provide targeted training to address them.</p>
+        </div>
+        <div class="feature-item">
+            <img src="https://img.icons8.com/color/256/kimono.png" alt="Self-Defense Icon">
+            <h3>Effective Use of Leverage and Technique</h3>
+            <p>BJJ's emphasis on leverage and technique allows you to subdue and control opponents with minimal effort, maximizing effectiveness while minimizing injury risks. Our classes for Law Enforcement professionals integrate these principles into real-world situations they may encounter on duty.</p>
+        </div>
+        <div class="feature-item">
+            <img src="https://img.icons8.com/color/256/mission-of-a-company.png" alt="Challenge Icon">
+            <h3>Enhanced Physical and Mental Preparedness</h3>
+            <p>Participate in a mentally and physically challenging training program, developing discipline, focus, and resilience, essential attributes for Law Enforcement professionals. Our classes provide a supportive environment to build the mental and physical strength needed to excel in demanding situations.</p>
+        </div>
+    </div>
+</section>
+
 
             <!-- Credits -->
             <div class="icons8-credit">
