--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -51,10 +51,11 @@
             <section class="hero">
                 <div class="container">
                     <!-- Update the hero section content -->
-                    <h2>Brazilian Jiu-Jitsu (BJJ) Classes for Law Enforcement</h2>
-        <p>Experience Brazilian Jiu-Jitsu (BJJ) Classes exclusively tailored for law enforcement professionals. Our specialized class focuses on practical self-defense techniques and essential skills for individuals in their careers.</p>
-        <p>Under the guidance of our highly skilled instructor, Maxime Raymond, who holds a Judo black belt and a BJJ purple belt, you'll receive the same high-quality training as our regular BJJ courses throughout the week.</p>
-        <p>The class is exclusively open to law enforcement personnel, offering training suitable for participants of all fitness and experience levels.</p>
+                    <h2>Brazilian Jiu-Jitsu (BJJ) Classes Exclusively Accessible to Law Enforcement</h2>
+<p>Experience the fundamentals of Brazilian Jiu-Jitsu (BJJ) in our specialized classes, exclusively accessible to law enforcement professionals. These classes are designed to equip individuals with essential BJJ skills that will benefit them in their careers.</p>
+<p>Our highly skilled instructor, Maxime Raymond, holds a Judo black belt and a BJJ purple belt, providing top-notch training to all participants throughout the week.</p>
+<p>The classes cater to individuals of all fitness and experience levels, ensuring that even beginners can develop a strong foundation in BJJ, enhancing their abilities for their respective careers in law enforcement.</p>
+
 
                     <!-- Update the link URL and text for registration -->
                     <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
