--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -51,10 +51,10 @@
             <section class="hero">
                 <div class="container">
                     <!-- Update the hero section content -->
-                    <h2>Brazilian Jiu-Jitsu (BJJ) Classes Exclusively Accessible to Law Enforcement</h2>
-<p>Experience the fundamentals of Brazilian Jiu-Jitsu (BJJ) in our specialized classes, exclusively accessible to law enforcement professionals. These classes are designed to equip individuals with essential BJJ skills that will benefit them in their careers.</p>
-<p>Our highly skilled instructor, Maxime Raymond, holds a Judo black belt and a BJJ purple belt, providing top-notch training to all participants throughout the week.</p>
-<p>The classes cater to individuals of all fitness and experience levels, ensuring that even beginners can develop a strong foundation in BJJ, enhancing their abilities for their respective careers in law enforcement.</p>
+<h2>Try Brazilian Jiu-Jitsu (BJJ) for Free!</h2>
+        <p>Experience the fundamentals of Brazilian Jiu-Jitsu (BJJ) in our one-time trial class, exclusively available to law enforcement professionals. This session is designed to introduce you to essential BJJ skills that can benefit you in your career.</p>
+        <p>Our highly skilled instructor, Maxime Raymond, holds a Judo black belt and a BJJ purple belt, providing top-notch training during this trial session.</p>
+        <p>The class is suitable for individuals of all fitness and experience levels, ensuring that even beginners can have a positive experience trying BJJ.</p>
 
 
                     <!-- Update the link URL and text for registration -->
