--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -68,7 +68,7 @@
         <div class="feature-item">
             <img src="https://img.icons8.com/doodle/256/muscle-flexing.png">
             <h3>Practical Self-Defense Techniques for Law Enforcement</h3>
-            <p>Experience BJJ techniques specifically tailored for real-life Law Enforcement scenarios, enhancing your ability to handle critical situations safely. Our instructors understand the unique challenges faced by law enforcement professionals and provide targeted training to address them.</p>
+            <p>Experience BJJ techniques designed to enhance your ability to handle critical situations safely, with a focus on the needs of law enforcement professionals. Our instructors are well-versed in the unique challenges faced in the field and provide targeted training to address them effectively.</p>
         </div>
         <div class="feature-item">
             <img src="https://img.icons8.com/color/256/kimono.png" alt="Self-Defense Icon">
