--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -73,7 +73,7 @@
         <div class="feature-item">
             <img src="https://img.icons8.com/color/256/kimono.png" alt="Self-Defense Icon">
             <h3>Effective Use of Leverage and Technique</h3>
-            <p>BJJ's emphasis on leverage and technique allows you to subdue and control opponents with minimal effort, maximizing effectiveness while minimizing injury risks. Our classes for Law Enforcement professionals integrate these principles into real-world situations they may encounter on duty.</p>
+            <p>BJJ's focus on leverage and technique enables you to subdue and control opponents with minimal effort, maximizing effectiveness while reducing the risk of injuries. Our classes for Law Enforcement professionals seamlessly integrate these principles, providing valuable training for the challenges they may encounter on duty.</p>
         </div>
         <div class="feature-item">
             <img src="https://img.icons8.com/color/256/mission-of-a-company.png" alt="Challenge Icon">
