--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -42,7 +42,7 @@
 
     <div class="banner-area">
         <!-- Update the banner heading if needed -->
-        <h2></h2>
+        <h2>LAW ENFORCEMENT-BJJ</h2>
     </div>
     
     <!-- CONTENT -->
