--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -42,7 +42,7 @@
 
     <div class="banner-area">
         <!-- Update the banner heading if needed -->
-        <h2>LAW ENFORCEMENT-BJJ</h2>
+        <h2></h2>
     </div>
     
     <!-- CONTENT -->
@@ -51,7 +51,7 @@
             <section class="hero">
                 <div class="container">
                     <!-- Update the hero section content -->
-<h2>Try Brazilian Jiu-Jitsu (BJJ) for Free!</h2>
+<h2>LAW ENFORCEMENT <br> Try Brazilian Jiu-Jitsu (BJJ) for Free!</h2>
         <p>Experience the fundamentals of Brazilian Jiu-Jitsu (BJJ) in our one-time trial class, exclusively available to law enforcement professionals. This session is designed to introduce you to essential BJJ skills that can benefit you in your career.</p>
         <p>Our highly skilled instructor, Maxime Raymond, holds a Judo black belt and a BJJ purple belt, providing top-notch training during this trial session.</p>
         <p>The class is suitable for individuals of all fitness and experience levels, ensuring that even beginners can have a positive experience trying BJJ.</p>
